# Wolf-Data-Storage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
notebooks/: .gitkeep
src/: __init__.py
src/data_ingestion/: __init__.py  binance_client.py
src/execution/: __init__.py  risk_manager.py  simulator.py
src/msnr_engine/: __init__.py  indicators.py  structure.py
tests/: __init__.py  test_binance_client.py  test_indicators.py  test_risk_manager.py
